--- a/templates/admin/edit_subjects.html
+++ b/templates/admin/edit_subjects.html
@@ -14,6 +14,7 @@ $(document).ready(function() {
     var indexRequirement = 0;
     var subjects = {{ subjects|tojson|safe }};
     var subjects = JSON.parse(subjects);
+    console.log(subjects);
     var listOfElectives = [];
     var listOfMandatory = [];
     for( i = 0; i < subjects[0].subjects.length; i++){
@@ -94,6 +95,7 @@ $(document).ready(function() {
     <div class="form-group">
     {{ form.csrf_token }}
     {{ form.index(required='true', style="display:none;") }}
+    {{ form.course_type(required='true', style="display:none;") }}
     <br/>
     {{ form.name.label }}
     {{ form.name(required='true', class="form-control") }}
