Ajeitei um bugzinho que tava fazendo alguns eventos não aparecerem na página inicial + mudei a linguagem dos datePickers

--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -247,6 +247,7 @@
             });
         });
     </script>
+    <script src="/static/jquery3/datepicker-pt-BR.js"></script>
 
 </body>
 </html>
