Mudanças requisitadas por professora Arlete
1: Deixei a página inicial mais bonita baseado nessa página do portal ccsa https://ccsa.ufrn.br/portal/?page_id=1985 2: Modifiquei o ccss de vários templates, por enquanto vou deixar como todos pegando de ppgp mesmo parecendo meio que uma gambiarra já que não existem planos de fazer ccss diferente pra cada página 3: Adicionei um crud de noticias 4: Adicionei os logos da UF e do CCSA no topo esquero 5: Mudei o tamanho da foto dos servidores e o brilho 6: Coloquei Publicações como uma aba separada e que agora tem capitulo de livros

--- a/static/posgraduacao/css/general.css
+++ b/static/posgraduacao/css/general.css
@@ -37,6 +37,10 @@ section header h2{
     margin-bottom: 5px;
 }
 
+.col-md-3 img {
+    filter:brightness(70%);
+}
+
 
 /* NAVBAR
 -------------------------------------------------- */
