--- a/templates/public/calendar.html
+++ b/templates/public/calendar.html
@@ -1,7 +1,7 @@
 {% extends "public/layout.html" %}
 
 {% block styles %}
-<link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/{{ std.post_graduation.initials.lower() }}.css"/>
+<link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/ppgp.css"/>
 <style>
     .card {
         width: 100%;
