--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -7,7 +7,7 @@
 
 <link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/carousel.css"/>
 <link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/schedule.css"/>
-<link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/{{ std.post_graduation.initials.lower() }}.css"/>
+<link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/ppgp.css"/>
 
 {% endblock %}
 
@@ -85,7 +85,7 @@
         <header>
             <h2><span class="glyphicon glyphicon-map-marker"></span> Atendimento</h2>
         </header>
-        <img src="/static/assets/logo_{{ std.post_graduation.initials.lower() }}.png" class="program-logo center-block" width="200">
+        <img src="/static/assets/logo_ppgp.png" class="program-logo center-block" width="200">
         <p>
             <span>Sala:</span> {{ attendance.location.building }}, {{ attendance.location.floor }}, {{ attendance.location.room }}.<br/>
             <span>Horários: </span> {{ attendance.location.opening }}<br/>
@@ -106,6 +106,32 @@
     </section>
     
     <div class="col-md-4">
+        <section>
+            <header>
+                <h2><span class="glyphicon glyphicon-pushpin"></span> Notícias</h2>
+            </header>
+            <p>Notícias relacionadas ao programa.</p>
+            {% if news %}
+            <table class="schedule-table">
+                {% for piece in news %}
+                {% if "deleted" not in piece %}
+                {% if loop.revindex < 3 %}
+                <tr class="schedule-container">
+                    <td class="schedule-container-info">
+                        <h4>{{ piece.title }}
+                        </h4>
+                        <h5>{{ piece.headLine }}</h5>
+                        <h6><a href="{{ url_for('public.view_news', id=piece.id, initials=std.post_graduation.initials) }}">Mais informações</a></h6><br/>
+                    </td>
+                </tr>
+                {% endif %}
+                {% endif %}
+                {% endfor %}
+            </table>
+            {% else %}
+            <p><small>(Não há nenhuma notícia cadastrada.)</small></p>
+            {% endif %}
+        </section>
         
         <section>
             <header>
@@ -116,7 +142,7 @@
             <table class="schedule-table">
                 {% for event in events %}
                 {% if "deleted" not in event %}
-                {% if loop.revindex < 4 %}
+                {% if loop.revindex < 3 %}
                 <tr class="schedule-container">
                     <td class="schedule-container-date">
                         <ul>
@@ -158,7 +184,7 @@
             <table class="schedule-table">
                 {% for report in final_reports %}
                 {% if "deleted" not in report %}
-                {% if loop.revindex < 4 %}
+                {% if loop.revindex < 3 %}
                 <tr class="schedule-container">
                     <td class="schedule-container-date">
                         <ul>
