--- a/templates/public/index.html
+++ b/templates/public/index.html
@@ -1,35 +1,29 @@
 {% extends "public/layout.html" %}
 
+{% block styles %}
+<link rel="stylesheet" type="text/css" href="/static/posgraduacao/css/ppgp.css"/>
+{% endblock %}
+
 {% block content %}
 
-<h2>Plataforma de Pós-Graduação</h2>
-<h3>Projeto Minerva</h3>
-
+<div class="main-page-header">
+    <h1 class="text-center">Pós Graduações</h1>
+</div>
+</br>
+{% for registered in std.post_graduations_registered.rewind() %}
+<div class="col-md-4" style="margin-top: 10px">
+    <button onclick="window.location.href='/{{ registered.initials}}'" type="button" class="btn btn-danger btn-block">{{ registered.name }}</button> 
+</div>
+{% endfor %}
+<div class="col-md-12">
+</br>
+</br>
 <p>
-    Esta é a <strong>plataforma acadêmica dos programas de pós-graduação do Centro de Ciências
-    Sociais Aplicadas (CCSA) da Universidade Federal do Rio Grande do Norte (UFRN)</strong>,
-    criado para aumentar o contato entre coordenação, secretaria, corpo docente e discentes
-    através de mais transparência, informações e (em breve) agilidade nos processos burocráticos.
+    Esta é a plataforma acadêmica dos programas de pós-graduação do Centro de Ciências Sociais Aplicadas (CCSA) da Universidade Federal do Rio Grande do Norte (UFRN), criado para aumentar o contato entre coordenação, secretaria, corpo docente e discentes através de mais transparência, informações e (em breve) agilidade nos processos burocráticos. 
 </p>
-
-<p>
-    Abaixo, a lista de Programas do Centro atualmente disponíveis através deste projeto:
-    <ul>
-        {% for registered in std.post_graduations_registered.rewind() %}
-        <li><a href="/{{ registered.initials }}">{{ registered.name }}</a></li>
-        {% endfor %}
-    </ul>
-</p>
-
-<p>
-    O projeto está sendo desenvolvido e mantido por orientação da Direção Geral e da
-    Assessoria Técnica do CCSA, sendo uma iniciativa do Programa de Pós-Graduação em Gestão
-    Pública (PPGP) e com apoio da Superintendência de Informática (SINFO) da universidade.
-</p>
-
-<p>
-    Mais livres produções técnicas do CCSA:
-    &lt;<a href="https://ccsa-ufrn.github.io/" target="_blank">https://ccsa-ufrn.github.io/</a>&gt;
-</p>
+</div>
+</br>
+</br>
+</section>
 
 {% endblock %}
