--- a/templates/public/layout.html
+++ b/templates/public/layout.html
@@ -126,7 +126,7 @@
                         <span class="glyphicon glyphicon-file"></span> Documentos</a>
                         <ul class="dropdown-menu">
                             <li><a href="{{ url_for('public.view_documents_regiments', initials=std.post_graduation.initials) }}">
-                                <span class="glyphicon glyphicon-file"></span> Regimentos</a>
+                                <span class="glyphicon glyphicon-file"></span> Resoluções</a>
                             </li>
                             <li><a href="{{ url_for('public.view_documents_atas', initials=std.post_graduation.initials) }}">
                                 <span class="glyphicon glyphicon-file"></span> ATAs</a>
