--- a/templates/public/documents_regiments.html
+++ b/templates/public/documents_regiments.html
@@ -12,7 +12,7 @@
 
 <section>
     <header class="page-header">
-        <h2>&raquo Documentos</h2>
+        <h2>Resoluções</h2>
     </header>
 
     <div class="panel panel-default">
