Modificações anteriores não estavam funcionando em resoluções maiores

--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -12,8 +12,9 @@
 {% endblock %}
 
 {% block precontent %}
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel">
+<div class="container">
+<div class="row">
+<div id="myCarousel" class="carousel slide col-offset-3" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -72,6 +73,8 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Próximo</span>
     </a>
+</div><!-- /.carousel -->
+</div><!-- /.carousel -->
 </div><!-- /.carousel -->
 
 {% endblock %}
