O último commit bagunçou o footer

--- a/templates/public/home.html
+++ b/templates/public/home.html
@@ -12,9 +12,10 @@
 {% endblock %}
 
 {% block precontent %}
-<div class="container">
-<div class="row">
-<div id="myCarousel" class="carousel slide col-offset-3" data-ride="carousel">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+    <div class="container">
+    <div class="row">
+    <div class="col-md-12">
     <!-- Indicators -->
     <ol class="carousel-indicators">
         <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -73,8 +74,9 @@
         <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
         <span class="sr-only">Próximo</span>
     </a>
-</div><!-- /.carousel -->
-</div><!-- /.carousel -->
+    </div>
+    </div>
+    </div>
 </div><!-- /.carousel -->
 
 {% endblock %}
